[package]
name = "ruggine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
arraytools = "0.1.5"
num-complex = "0.4.6"
objc2-metal = "0.3.1"
plotters = "0.3.7"
rand = "0.9.2"
rtlsdr = "0.1.4"
tokio = { version = "1", features = ["full"] }
warp = { version = "0.4", features = ["server"] }
